--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -409,11 +409,11 @@ body
 
     .carousel
       opacity: 1
-
+      transition: opacity 0.3s ease
 
       &.cross
         opacity: 0
-        transition: opacity 0.3s ease
+
 
       .leasingItem
         padding: 30px
@@ -463,6 +463,7 @@ body
       display: flex
       align-items: center
       justify-content: center
+      align-self: center
 
       .paginator
         display: flex
@@ -485,7 +486,6 @@ body
 
           &.active
             opacity: 1
-
 
   .contactsWrapper
     .contactsHeader
@@ -641,7 +641,7 @@ body
   .footerWrapper
     padding-top: 10px
     position: relative
-    z-index: 15
+    z-index: 14
     background-color: rgba(0, 0, 0, 0.53)
     height: 100%
     display: grid
@@ -1605,12 +1605,12 @@ body
 
     .container
       .leasingWrapper
-        grid-template-columns: 1fr
-        grid-template-rows: 1fr 75px
+
+
         .carousel
           .leasingItem
             grid-template-columns: 1fr
-            padding: 10px 15px 0
+            padding: 15px
 
             .leftSide
               .header
@@ -1627,8 +1627,8 @@ body
         .paginatorWrapper
           .paginator
             padding: 0
-            margin-top: 10px
-            flex-direction: row
+            margin-top: 0
+
             .paginatorItem
               width: 20px
               height: 20px
@@ -1984,33 +1984,34 @@ body
                       font-size: 23px
 
       .leasingWrapper
-
+        margin: 30px 0
+        align-items: flex-start
         padding: 0 15px
         grid-column-gap: 15px
         .carousel
           .leasingItem
             grid-template-columns: 1fr
             padding: 0
-            &.cars
-              background: url("../assets/images/carsMiniLogo.png") no-repeat bottom center
-              background-size:  contain
-              background-blend-mode: overlay
-            &.equipment
-              background: url("../assets/images/equipmentMiniLogo.png") no-repeat bottom center
-              background-size:  contain
-              background-blend-mode: overlay
-            &.special
-              background: url("../assets/images/specialMiniLogo.png") no-repeat bottom center
-              background-size:  contain
-              background-blend-mode: overlay
-            &.buses
-              background: url("../assets/images/busesMiniLogo.png") no-repeat bottom center
-              background-size:  contain
-              background-blend-mode: overlay
-            &.tracks
-              background: url("../assets/images/tracksMiniLogo.png") no-repeat bottom center
-              background-size:  contain
-              background-blend-mode: overlay
+            //&.cars
+            //  background: url("../assets/images/carsMiniLogo.png") no-repeat bottom center
+            //  background-size:  contain
+            //  background-blend-mode: overlay
+            //&.equipment
+            //  background: url("../assets/images/equipmentMiniLogo.png") no-repeat bottom center
+            //  background-size:  contain
+            //  background-blend-mode: overlay
+            //&.special
+            //  background: url("../assets/images/specialMiniLogo.png") no-repeat bottom center
+            //  background-size:  contain
+            //  background-blend-mode: overlay
+            //&.buses
+            //  background: url("../assets/images/busesMiniLogo.png") no-repeat bottom center
+            //  background-size:  contain
+            //  background-blend-mode: overlay
+            //&.tracks
+            //  background: url("../assets/images/tracksMiniLogo.png") no-repeat bottom center
+            //  background-size:  contain
+            //  background-blend-mode: overlay
 
 
 
@@ -2085,7 +2086,7 @@ body
                       font-size: 21px
 
       .leasingWrapper
-        margin: 15px 0
+
         .carousel
           .leasingItem
             .leftSide
