Делаю функционал татч слайдера для мобильных устройствю Поддтормаживает смена слайда по татчу на мобилках. Разбираюсь

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -403,13 +403,18 @@ body
         align-items: center
 
   .leasingWrapper
+    overflow: hidden
     display: grid
     height: 100%
-    grid-template-columns: 1fr 40px
+    grid-template-columns: 1fr 45px
 
     .carousel
       opacity: 1
       transition: opacity 0.3s ease
+
+
+
+
 
       &.cross
         opacity: 0
