--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -408,11 +408,23 @@ body
     height: 100%
 
     .swiper-container
+      .swiper-button-prev, .swiper-button-next
+        color: #da251d
+
+      .swiper-pagination
+        .swiper-pagination-bullet
+          margin: 0px 10px
+          width: 20px
+          height: 20px
+          &.swiper-pagination-bullet-active
+            background: #da251d
+
+
       .swiper-wrapper
         .swiper-slide
 
           .leasingItem
-            padding: 30px
+            padding: 40px
             height: 100%
             display: grid
             grid-template-columns: 2fr 1fr
@@ -424,7 +436,7 @@ body
               text-align: left
               display: flex
               flex-direction: column
-              padding-left: 30px
+              padding-left: 40px
 
 
               .header
@@ -457,7 +469,6 @@ body
               .leasingImage
                 img
                   width: 100%
-
 
 
   .contactsWrapper
@@ -540,7 +551,7 @@ body
         display: flex
         justify-content: center
 
-        .emailFormWrapper
+
 
     .map
       position: relative
@@ -706,17 +717,24 @@ body
 
       .leasingWrapper
         .swiper-container
+          .swiper-pagination
+            .swiper-pagination-bullet
+              margin: 0px 10px
+              width: 17px
+              height: 17px
           .swiper-wrapper
             .swiper-slide
               .leasingItem
+                padding: 10px 40px
                 .leftSide
                   .header
                     h1
                       font-size: 35px
 
                   .description
-                    span
-                      font-size: 24px
+                    grid-row-gap: 20px
+                    p, span
+                      font-size: 22px
 
       .contactsWrapper
         .contactsHeader
@@ -848,10 +866,26 @@ body
         align-items: center
 
         .swiper-container
+          .swiper-button-prev
+            width: 40px
+            height: 40px
+            left: 0
+
+          .swiper-button-next
+            width: 40px
+            height: 40px
+            right: 0
+
+
+          .swiper-pagination
+            .swiper-pagination-bullet
+              width: 25px
+              height: 25px
+              margin: 0 14px
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 40px
+                margin-bottom: 95px
 
                 .leftSide
                   .description
@@ -949,10 +983,14 @@ body
         align-items: flex-start
 
         .swiper-container
+          .swiper-pagination
+            .swiper-pagination-bullet
+              width: 15px
+              height: 15px
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 0
+                margin-bottom: 60px
 
                 .leftSide
                   .header
@@ -1391,16 +1429,23 @@ body
       .leasingWrapper
         padding: 0 20px
         align-items: center
+
         .swiper-container
+          .swiper-pagination
+            .swiper-pagination-bullet
+              width: 20px
+              height: 20px
+              margin: 0 14px
           .swiper-wrapper
             .swiper-slide
               .leasingItem
+                margin-bottom: 100px
                 grid-template-columns: 4fr 3fr
                 grid-template-rows: 1fr
                 grid-column-gap: 20px
 
                 .leftSide
-                  padding-left: 0
+                  padding-left: 40px
 
                   .header
                     margin-bottom: 20px
@@ -1554,10 +1599,16 @@ body
 
       .leasingWrapper
         .swiper-container
+          .swiper-pagination
+            .swiper-pagination-bullet
+              width: 20px
+              height: 20px
+              margin: 0 14px
           .swiper-wrapper
             .swiper-slide
               .leasingItem
                 .leftSide
+                  padding-left: 20px
                   .header
                     margin-bottom: 25px
 
@@ -1593,6 +1644,8 @@ body
     .container
       .leasingWrapper
         .swiper-container
+          .swiper-button-prev, .swiper-button-next
+            display: none
           .swiper-wrapper
             .swiper-slide
               .leasingItem
@@ -1613,8 +1666,6 @@ body
 
                     p, span
                       font-size: 17px
-
-
 
 
 @media (max-width: 767px)
@@ -1892,11 +1943,19 @@ body
             line-height: 1.2
 
 
-@media (max-width: 767px) and (max-height: 400px)
+@media (max-width: 767px) and (max-height: 440px)
   .appWrapper
     grid-row-gap: 0
 
     .container
+      .leasingWrapper
+        .swiper-container
+          .swiper-button-prev, .swiper-button-next
+            display: none
+          .swiper-wrapper
+            .swiper-slide
+              .leasingItem
+                margin-bottom: 65px
 
 
 
@@ -1970,9 +2029,12 @@ body
         grid-column-gap: 15px
 
         .swiper-container
+          .swiper-button-prev, .swiper-button-next
+            display: none
           .swiper-wrapper
             .swiper-slide
               .leasingItem
+                margin-bottom: 40px
                 grid-template-columns: 1fr
                 padding: 0
 
@@ -2048,12 +2110,13 @@ body
       .leasingWrapper
         .swiper-container
           .swiper-wrapper
-           .swiper-slide
-            .leasingItem
-              .leftSide
-                .description
-                  p, span
-                    font-size: 18px
+            .swiper-slide
+              .leasingItem
+                margin-bottom: 85px
+                .leftSide
+                  .description
+                    p, span
+                      font-size: 18px
 
       .contactsWrapper
         .contactsContent
@@ -2113,11 +2176,11 @@ body
                       font-size: 17px
 
       .leasingWrapper
-
         .swiper-container
           .swiper-wrapper
             .swiper-slide
               .leasingItem
+                margin-bottom: 80px
                 .leftSide
                   .description
                     grid-row-gap: 17px
@@ -2148,7 +2211,3 @@ body
             span
               font-size: 13px
               margin-bottom: 15px
-
-
-
-
