--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -413,7 +413,7 @@ body
 
       .swiper-pagination
         .swiper-pagination-bullet
-          margin: 0px 10px
+          margin: 0 10px
           width: 20px
           height: 20px
           &.swiper-pagination-bullet-active
@@ -885,7 +885,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 95px
+                margin-bottom: 120px
 
                 .leftSide
                   .description
@@ -990,7 +990,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 60px
+                //margin-bottom: 60px
 
                 .leftSide
                   .header
@@ -1167,8 +1167,10 @@ body
             display: block
 
             li
-              padding: 20px 0
+              padding: 30px 0
               text-align: right
+              a
+                font-size: 25px
 
           &.active
 
@@ -1426,6 +1428,13 @@ body
 @media (max-width: 1024px) and (max-height: 800px)
   .appWrapper
     .container
+      .navbarWrapper
+        .navbarMenu
+          ul
+            li
+              padding: 25px 0
+              a
+                font-size: 20px
       .leasingWrapper
         padding: 0 20px
         align-items: center
@@ -1439,7 +1448,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 100px
+
                 grid-template-columns: 4fr 3fr
                 grid-template-rows: 1fr
                 grid-column-gap: 20px
@@ -1607,6 +1616,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
+                margin-bottom: 90px
                 .leftSide
                   padding-left: 20px
                   .header
@@ -1651,6 +1661,7 @@ body
               .leasingItem
                 grid-template-columns: 1fr
                 padding: 15px
+                margin-bottom: 0
 
                 .leftSide
                   .header
@@ -1711,7 +1722,11 @@ body
         .navbarMenu
           padding-bottom: 50px
           top: 50px
-
+          ul
+            li
+              padding: 20px 0
+              a
+                font-size: 17px
         .navbarContacts
           display: none
 
@@ -1848,6 +1863,12 @@ body
           .rightSide
             margin-bottom: 10px
 
+      .leasingWrapper
+        .swiper-container
+          .swiper-wrapper
+            .swiper-slide
+              .leasingItem
+                margin-bottom: 0
       .contactsWrapper
         padding: 0 15px
 
@@ -1952,10 +1973,8 @@ body
         .swiper-container
           .swiper-button-prev, .swiper-button-next
             display: none
-          .swiper-wrapper
-            .swiper-slide
-              .leasingItem
-                margin-bottom: 65px
+
+
 
 
 
@@ -2034,7 +2053,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 40px
+                //margin-bottom: 40px
                 grid-template-columns: 1fr
                 padding: 0
 
@@ -2112,7 +2131,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 85px
+                //margin-bottom: 85px
                 .leftSide
                   .description
                     p, span
@@ -2180,7 +2199,7 @@ body
           .swiper-wrapper
             .swiper-slide
               .leasingItem
-                margin-bottom: 80px
+                //margin-bottom: 80px
                 .leftSide
                   .description
                     grid-row-gap: 17px
